generated/BaseModelicaParser.cpp

// Generated from /home/yacoda/programs/lacemodelica/grammar/BaseModelica.g4 by ANTLR 4.13.2



#include "BaseModelicaParser.h"


using namespace antlrcpp;
using namespace basemodelica;

using namespace antlr4;

namespace {

struct BaseModelicaParserStaticData final {
  BaseModelicaParserStaticData(std::vector<std::string> ruleNames,
                        std::vector<std::string> literalNames,
                        std::vector<std::string> symbolicNames)
      : ruleNames(std::move(ruleNames)), literalNames(std::move(literalNames)),
        symbolicNames(std::move(symbolicNames)),
        vocabulary(this->literalNames, this->symbolicNames) {}

  BaseModelicaParserStaticData(const BaseModelicaParserStaticData&) = delete;
  BaseModelicaParserStaticData(BaseModelicaParserStaticData&&) = delete;
  BaseModelicaParserStaticData& operator=(const BaseModelicaParserStaticData&) = delete;
  BaseModelicaParserStaticData& operator=(BaseModelicaParserStaticData&&) = delete;

  std::vector<antlr4::dfa::DFA> decisionToDFA;
  antlr4::atn::PredictionContextCache sharedContextCache;
  const std::vector<std::string> ruleNames;
  const std::vector<std::string> literalNames;
  const std::vector<std::string> symbolicNames;
  const antlr4::dfa::Vocabulary vocabulary;
  antlr4::atn::SerializedATNView serializedATN;
  std::unique_ptr<antlr4::atn::ATN> atn;
};

::antlr4::internal::OnceFlag basemodelicaParserOnceFlag;
#if ANTLR4_USE_THREAD_LOCAL_CACHE
static thread_local
#endif
std::unique_ptr<BaseModelicaParserStaticData> basemodelicaParserStaticData = nullptr;

void basemodelicaParserInitialize() {
#if ANTLR4_USE_THREAD_LOCAL_CACHE
  if (basemodelicaParserStaticData != nullptr) {
    return;
  }
#else
  assert(basemodelicaParserStaticData == nullptr);
#endif
  auto staticData = std::make_unique<BaseModelicaParserStaticData>(
    std::vector<std::string>{
      "baseModelica", "versionHeader", "classDefinition", "classPrefixes", 
      "classSpecifier", "longClassSpecifier", "shortClassSpecifier", "derClassSpecifier", 
      "basePrefix", "enumList", "enumerationLiteral", "composition", "languageSpecification", 
      "externalFunctionCall", "genericElement", "normalElement", "parameterEquation", 
      "guessValue", "basePartition", "subPartition", "clockClause", "componentClause", 
      "globalConstant", "typePrefix", "componentList", "componentDeclaration", 
      "declaration", "modification", "classModification", "argumentList", 
      "argument", "elementModificationOrReplaceable", "elementModification", 
      "equation", "initialEquation", "statement", "ifEquation", "ifStatement", 
      "forEquation", "forStatement", "forIndex", "whileStatement", "whenEquation", 
      "whenStatement", "prioritizeEquation", "prioritizeExpression", "priority", 
      "decoration", "expression", "expressionNoDecoration", "ifExpression", 
      "simpleExpression", "logicalExpression", "logicalTerm", "logicalFactor", 
      "relation", "relationalOperator", "arithmeticExpression", "addOperator", 
      "term", "mulOperator", "factor", "primary", "typeSpecifier", "name", 
      "componentReference", "functionCallArgs", "functionArguments", "functionArgumentsNonFirst", 
      "arrayArguments", "namedArguments", "namedArgument", "functionArgument", 
      "functionPartialApplication", "outputExpressionList", "expressionList", 
      "arraySubscripts", "subscript", "comment", "stringComment", "annotationComment"
    },
    std::vector<std::string>{
      "", "'package'", "';'", "'model'", "'end'", "'type'", "'operator'", 
      "'record'", "'pure'", "'constant'", "'impure'", "'function'", "'='", 
      "'enumeration'", "'('", "':'", "')'", "'der'", "','", "'input'", "'output'", 
      "'equation'", "'initial'", "'algorithm'", "'external'", "'parameter'", 
      "'guess'", "'partition'", "'subpartition'", "'Clock'", "'discrete'", 
      "':='", "'break'", "'return'", "'if'", "'then'", "'elseif'", "'else'", 
      "'for'", "'loop'", "'in'", "'while'", "'when'", "'elsewhen'", "'prioritize'", 
      "'@'", "'or'", "'and'", "'not'", "'<'", "'<='", "'>'", "'>='", "'=='", 
      "'<>'", "'+'", "'-'", "'.+'", "'.-'", "'*'", "'/'", "'.*'", "'./'", 
      "'^'", "'.^'", "'false'", "'true'", "'['", "']'", "'{'", "'}'", "'.'", 
      "'annotation'"
    },
    std::vector<std::string>{
      "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", 
      "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", 
      "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", 
      "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", 
      "", "", "", "", "", "VERSION_HEADER", "IDENT", "UNSIGNED_NUMBER", 
      "UNSIGNED_INTEGER", "STRING", "WS", "LINE_COMMENT", "ML_COMMENT"
    }
  );
  staticData->serializedATN = antlr4::atn::SerializedATNView(serializedATNSegment, sizeof(serializedATNSegment) / sizeof(serializedATNSegment[0]));

  antlr4::atn::ATNDeserializer deserializer;
  staticData->atn = deserializer.deserialize(staticData->serializedATN);

  const size_t count = staticData->atn->getNumberOfDecisions();
  staticData->decisionToDFA.reserve(count);
  for (size_t i = 0; i < count; i++) { 
    staticData->decisionToDFA.emplace_back(staticData->atn->getDecisionState(i), i);
  }
  basemodelicaParserStaticData = std::move(staticData);
}

}

BaseModelicaParser::BaseModelicaParser(TokenStream *input) : BaseModelicaParser(input, antlr4::atn::ParserATNSimulatorOptions()) {}

BaseModelicaParser::BaseModelicaParser(TokenStream *input, const antlr4::atn::ParserATNSimulatorOptions &options) : Parser(input) {
  BaseModelicaParser::initialize();
  _interpreter = new atn::ParserATNSimulator(this, *basemodelicaParserStaticData->atn, basemodelicaParserStaticData->decisionToDFA, basemodelicaParserStaticData->sharedContextCache, options);
}

BaseModelicaParser::~BaseModelicaParser() {
  delete _interpreter;
}

const atn::ATN& BaseModelicaParser::getATN() const {
  return *basemodelicaParserStaticData->atn;
}

std::string BaseModelicaParser::getGrammarFileName() const {
  return "BaseModelica.g4";
}

const std::vector<std::string>& BaseModelicaParser::getRuleNames() const {
  return basemodelicaParserStaticData->ruleNames;
}

const dfa::Vocabulary& BaseModelicaParser::getVocabulary() const {
  return basemodelicaParserStaticData->vocabulary;
}

antlr4::atn::SerializedATNView BaseModelicaParser::getSerializedATN() const {
  return basemodelicaParserStaticData->serializedATN;
}


//----------------- BaseModelicaContext ------------------------------------------------------------------

BaseModelicaParser::BaseModelicaContext::BaseModelicaContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

BaseModelicaParser::VersionHeaderContext* BaseModelicaParser::BaseModelicaContext::versionHeader() {
  return getRuleContext<BaseModelicaParser::VersionHeaderContext>(0);
}

std::vector<tree::TerminalNode *> BaseModelicaParser::BaseModelicaContext::IDENT() {
  return getTokens(BaseModelicaParser::IDENT);
}

tree::TerminalNode* BaseModelicaParser::BaseModelicaContext::IDENT(size_t i) {
  return getToken(BaseModelicaParser::IDENT, i);
}

BaseModelicaParser::LongClassSpecifierContext* BaseModelicaParser::BaseModelicaContext::longClassSpecifier() {
  return getRuleContext<BaseModelicaParser::LongClassSpecifierContext>(0);
}

std::vector<BaseModelicaParser::ClassDefinitionContext *> BaseModelicaParser::BaseModelicaContext::classDefinition() {
  return getRuleContexts<BaseModelicaParser::ClassDefinitionContext>();
}

BaseModelicaParser::ClassDefinitionContext* BaseModelicaParser::BaseModelicaContext::classDefinition(size_t i) {
  return getRuleContext<BaseModelicaParser::ClassDefinitionContext>(i);
}

std::vector<BaseModelicaParser::GlobalConstantContext *> BaseModelicaParser::BaseModelicaContext::globalConstant() {
  return getRuleContexts<BaseModelicaParser::GlobalConstantContext>();
}

BaseModelicaParser::GlobalConstantContext* BaseModelicaParser::BaseModelicaContext::globalConstant(size_t i) {
  return getRuleContext<BaseModelicaParser::GlobalConstantContext>(i);
}

std::vector<BaseModelicaParser::DecorationContext *> BaseModelicaParser::BaseModelicaContext::decoration() {
  return getRuleContexts<BaseModelicaParser::DecorationContext>();
}

BaseModelicaParser::DecorationContext* BaseModelicaParser::BaseModelicaContext::decoration(size_t i) {
  return getRuleContext<BaseModelicaParser::DecorationContext>(i);
}

BaseModelicaParser::AnnotationCommentContext* BaseModelicaParser::BaseModelicaContext::annotationComment() {
  return getRuleContext<BaseModelicaParser::AnnotationCommentContext>(0);
}


size_t BaseModelicaParser::BaseModelicaContext::getRuleIndex() const {
  return BaseModelicaParser::RuleBaseModelica;
}


BaseModelicaParser::BaseModelicaContext* BaseModelicaParser::baseModelica() {
  BaseModelicaContext *_localctx = _tracker.createInstance<BaseModelicaContext>(_ctx, getState());
  enterRule(_localctx, 0, BaseModelicaParser::RuleBaseModelica);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    size_t alt;
    enterOuterAlt(_localctx, 1);
    setState(162);
    versionHeader();
    setState(163);
    match(BaseModelicaParser::T__0);
    setState(164);
    match(BaseModelicaParser::IDENT);
    setState(179);
    _errHandler->sync(this);
    alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 3, _ctx);
    while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER) {
      if (alt == 1) {
        setState(177);
        _errHandler->sync(this);
        switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 2, _ctx)) {
        case 1: {
          setState(166);
          _errHandler->sync(this);

          _la = _input->LA(1);
          if (_la == BaseModelicaParser::T__44) {
            setState(165);
            decoration();
          }
          setState(168);
          classDefinition();
          setState(169);
          match(BaseModelicaParser::T__1);
          break;
        }

        case 2: {
          setState(172);
          _errHandler->sync(this);

          _la = _input->LA(1);
          if (_la == BaseModelicaParser::T__44) {
            setState(171);
            decoration();
          }
          setState(174);
          globalConstant();
          setState(175);
          match(BaseModelicaParser::T__1);
          break;
        }

        default:
          break;
        } 
      }
      setState(181);
      _errHandler->sync(this);
      alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 3, _ctx);
    }
    setState(183);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == BaseModelicaParser::T__44) {
      setState(182);
      decoration();
    }
    setState(185);
    match(BaseModelicaParser::T__2);
    setState(186);
    longClassSpecifier();
    setState(187);
    match(BaseModelicaParser::T__1);
    setState(191);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == BaseModelicaParser::T__71) {
      setState(188);
      annotationComment();
      setState(189);
      match(BaseModelicaParser::T__1);
    }
    setState(193);
    match(BaseModelicaParser::T__3);
    setState(194);
    match(BaseModelicaParser::IDENT);
    setState(195);
    match(BaseModelicaParser::T__1);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- VersionHeaderContext ------------------------------------------------------------------

BaseModelicaParser::VersionHeaderContext::VersionHeaderContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* BaseModelicaParser::VersionHeaderContext::VERSION_HEADER() {
  return getToken(BaseModelicaParser::VERSION_HEADER, 0);
}


size_t BaseModelicaParser::VersionHeaderContext::getRuleIndex() const {
  return BaseModelicaParser::RuleVersionHeader;
}


BaseModelicaParser::VersionHeaderContext* BaseModelicaParser::versionHeader() {
  VersionHeaderContext *_localctx = _tracker.createInstance<VersionHeaderContext>(_ctx, getState());
  enterRule(_localctx, 2, BaseModelicaParser::RuleVersionHeader);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(197);
    match(BaseModelicaParser::VERSION_HEADER);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ClassDefinitionContext ------------------------------------------------------------------

BaseModelicaParser::ClassDefinitionContext::ClassDefinitionContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

BaseModelicaParser::ClassPrefixesContext* BaseModelicaParser::ClassDefinitionContext::classPrefixes() {
  return getRuleContext<BaseModelicaParser::ClassPrefixesContext>(0);
}

BaseModelicaParser::ClassSpecifierContext* BaseModelicaParser::ClassDefinitionContext::classSpecifier() {
  return getRuleContext<BaseModelicaParser::ClassSpecifierContext>(0);
}


size_t BaseModelicaParser::ClassDefinitionContext::getRuleIndex() const {
  return BaseModelicaParser::RuleClassDefinition;
}


BaseModelicaParser::ClassDefinitionContext* BaseModelicaParser::classDefinition() {
  ClassDefinitionContext *_localctx = _tracker.createInstance<ClassDefinitionContext>(_ctx, getState());
  enterRule(_localctx, 4, BaseModelicaParser::RuleClassDefinition);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(199);
    classPrefixes();
    setState(200);
    classSpecifier();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ClassPrefixesContext ------------------------------------------------------------------

BaseModelicaParser::ClassPrefixesContext::ClassPrefixesContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t BaseModelicaParser::ClassPrefixesContext::getRuleIndex() const {
  return BaseModelicaParser::RuleClassPrefixes;
}


BaseModelicaParser::ClassPrefixesContext* BaseModelicaParser::classPrefixes() {
  ClassPrefixesContext *_localctx = _tracker.createInstance<ClassPrefixesContext>(_ctx, getState());
  enterRule(_localctx, 6, BaseModelicaParser::RuleClassPrefixes);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(218);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 10, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(202);
      match(BaseModelicaParser::T__4);
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(204);
      _errHandler->sync(this);

      _la = _input->LA(1);
      if (_la == BaseModelicaParser::T__5) {
        setState(203);
        match(BaseModelicaParser::T__5);
      }
      setState(206);
      match(BaseModelicaParser::T__6);
      break;
    }

    case 3: {
      enterOuterAlt(_localctx, 3);
      setState(212);
      _errHandler->sync(this);
      switch (_input->LA(1)) {
        case BaseModelicaParser::T__7: {
          setState(207);
          match(BaseModelicaParser::T__7);
          setState(209);
          _errHandler->sync(this);

          _la = _input->LA(1);
          if (_la == BaseModelicaParser::T__8) {
            setState(208);
            match(BaseModelicaParser::T__8);
          }
          break;
        }

        case BaseModelicaParser::T__9: {
          setState(211);
          match(BaseModelicaParser::T__9);
          break;
        }

        case BaseModelicaParser::T__5:
        case BaseModelicaParser::T__10: {
          break;
        }

      default:
        break;
      }
      setState(215);
      _errHandler->sync(this);

      _la = _input->LA(1);
      if (_la == BaseModelicaParser::T__5) {
        setState(214);
        match(BaseModelicaParser::T__5);
      }
      setState(217);
      match(BaseModelicaParser::T__10);
      break;
    }

    default:
      break;
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ClassSpecifierContext ------------------------------------------------------------------

BaseModelicaParser::ClassSpecifierContext::ClassSpecifierContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

BaseModelicaParser::LongClassSpecifierContext* BaseModelicaParser::ClassSpecifierContext::longClassSpecifier() {
  return getRuleContext<BaseModelicaParser::LongClassSpecifierContext>(0);
}

BaseModelicaParser::ShortClassSpecifierContext* BaseModelicaParser::ClassSpecifierContext::shortClassSpecifier() {
  return getRuleContext<BaseModelicaParser::ShortClassSpecifierContext>(0);
}

BaseModelicaParser::DerClassSpecifierContext* BaseModelicaParser::ClassSpecifierContext::derClassSpecifier() {
  return getRuleContext<BaseModelicaParser::DerClassSpecifierContext>(0);
}


size_t BaseModelicaParser::ClassSpecifierContext::getRuleIndex() const {
  return BaseModelicaParser::RuleClassSpecifier;
}


BaseModelicaParser::ClassSpecifierContext* BaseModelicaParser::classSpecifier() {
  ClassSpecifierContext *_localctx = _tracker.createInstance<ClassSpecifierContext>(_ctx, getState());
  enterRule(_localctx, 8, BaseModelicaParser::RuleClassSpecifier);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(223);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 11, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(220);
      longClassSpecifier();
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(221);
      shortClassSpecifier();
      break;
    }

    case 3: {
      enterOuterAlt(_localctx, 3);
      setState(222);
      derClassSpecifier();
      break;
    }

    default:
      break;
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- LongClassSpecifierContext ------------------------------------------------------------------

BaseModelicaParser::LongClassSpecifierContext::LongClassSpecifierContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<tree::TerminalNode *> BaseModelicaParser::LongClassSpecifierContext::IDENT() {
  return getTokens(BaseModelicaParser::IDENT);
}

tree::TerminalNode* BaseModelicaParser::LongClassSpecifierContext::IDENT(size_t i) {
  return getToken(BaseModelicaParser::IDENT, i);
}

BaseModelicaParser::StringCommentContext* BaseModelicaParser::LongClassSpecifierContext::stringComment() {
  return getRuleContext<BaseModelicaParser::StringCommentContext>(0);
}

BaseModelicaParser::CompositionContext* BaseModelicaParser::LongClassSpecifierContext::composition() {
  return getRuleContext<BaseModelicaParser::CompositionContext>(0);
}


size_t BaseModelicaParser::LongClassSpecifierContext::getRuleIndex() const {
  return BaseModelicaParser::RuleLongClassSpecifier;
}


BaseModelicaParser::LongClassSpecifierContext* BaseModelicaParser::longClassSpecifier() {
  LongClassSpecifierContext *_localctx = _tracker.createInstance<LongClassSpecifierContext>(_ctx, getState());
  enterRule(_localctx, 10, BaseModelicaParser::RuleLongClassSpecifier);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(225);
    match(BaseModelicaParser::IDENT);
    setState(226);
    stringComment();
    setState(227);
    composition();
    setState(228);
    match(BaseModelicaParser::T__3);
    setState(229);
    match(BaseModelicaParser::IDENT);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ShortClassSpecifierContext ------------------------------------------------------------------

BaseModelicaParser::ShortClassSpecifierContext::ShortClassSpecifierContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* BaseModelicaParser::ShortClassSpecifierContext::IDENT() {
  return getToken(BaseModelicaParser::IDENT, 0);
}

BaseModelicaParser::CommentContext* BaseModelicaParser::ShortClassSpecifierContext::comment() {
  return getRuleContext<BaseModelicaParser::CommentContext>(0);
}

BaseModelicaParser::TypeSpecifierContext* BaseModelicaParser::ShortClassSpecifierContext::typeSpecifier() {
  return getRuleContext<BaseModelicaParser::TypeSpecifierContext>(0);
}

BaseModelicaParser::BasePrefixContext* BaseModelicaParser::ShortClassSpecifierContext::basePrefix() {
  return getRuleContext<BaseModelicaParser::BasePrefixContext>(0);
}

BaseModelicaParser::ClassModificationContext* BaseModelicaParser::ShortClassSpecifierContext::classModification() {
  return getRuleContext<BaseModelicaParser::ClassModificationContext>(0);
}

BaseModelicaParser::EnumListContext* BaseModelicaParser::ShortClassSpecifierContext::enumList() {
  return getRuleContext<BaseModelicaParser::EnumListContext>(0);
}


size_t BaseModelicaParser::ShortClassSpecifierContext::getRuleIndex() const {
  return BaseModelicaParser::RuleShortClassSpecifier;
}


BaseModelicaParser::ShortClassSpecifierContext* BaseModelicaParser::shortClassSpecifier() {
  ShortClassSpecifierContext *_localctx = _tracker.createInstance<ShortClassSpecifierContext>(_ctx, getState());
  enterRule(_localctx, 12, BaseModelicaParser::RuleShortClassSpecifier);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(231);
    match(BaseModelicaParser::IDENT);
    setState(232);
    match(BaseModelicaParser::T__11);
    setState(249);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case BaseModelicaParser::T__18:
      case BaseModelicaParser::T__19:
      case BaseModelicaParser::T__70:
      case BaseModelicaParser::IDENT: {
        setState(234);
        _errHandler->sync(this);

        _la = _input->LA(1);
        if (_la == BaseModelicaParser::T__18

        || _la == BaseModelicaParser::T__19) {
          setState(233);
          basePrefix();
        }
        setState(236);
        typeSpecifier();
        setState(238);
        _errHandler->sync(this);
